--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,4 @@ jobs:
         run: |
           go get github.com/tmedwards/tweego
           export PATH=$PATH:$(go env GOPATH)/bin
-          tweego salesadventure.tw -o dist/index.html
-
-      - name: Deploy to Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: ./dist
+          tweego -o dist/story_latest.html src
